# bandit-risk

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bandit_risk/: __init__.py  __init___.py
bandit_risk/agents/: epsilon_greedy.py
bandit_risk/envs/: __init__.py  __init___.py  esg_env.py  inspection_env.py
bandit_risk/utils/: __init__.py  __init___.py  plotting.py
docs/: genuine_bandits.md
docs/mathematics/: day5_mathematics.md
experiments/: run_week1.py
notes/: week1.md
tests/: test_epsilon_greedy.py  test_esg_env.py  test_inspection_env.py  test_plotting.py
