[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandit-risk"
version = "0.1.0"
description = "Multi-armed bandit algorithms for insurance and property intelligence"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mohammad", email = "mohammad@hubbcast.com" }]
keywords = [
    "reinforcement-learning",
    "multi-armed-bandit",
    "insurance",
    "proptech",
    "risk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "matplotlib>=3.7",
    "ruff>=0.5",
    "black>=24.0",
]

[project.urls]
Homepage = "https://github.com/m-aghababaie/bandit-risk"
Repository = "https://github.com/m-aghababaie/bandit-risk"
Issues = "https://github.com/m-aghababaie/bandit-risk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bandit_risk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bandit_risk"]

# ----------------------------------------------------------------------
# Code style — Black (formatter) and Ruff (linter)
# ----------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade
select = ["E", "F", "I", "W", "UP"]
# E501 (line too long) is handled by black; ignore the lint duplicate.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests may access "private" env attributes (e.g. env._rng) deliberately.
"tests/*" = ["E402"]